# libcove

./: .clang-format  CMakeLists.txt  meson.build
.github/workflows/: format.yml  ut.yml
container/: rbtree.c  rbtree.h
coroutine/: minico.h
include/: build_bug.h  compiler.h  compiler_attributes.h  compiler_types.h  container_of.h  hash.h  hashtable.h  list.h  rbtree.h  rbtree_augmented.h  rbtree_types.h  refcount.h
src/: rbtree.c  refcount.c
subprojects/: criterion.wrap
test/: meson.build  minico.c  rbtree.c
tests/: CMakeLists.txt  test_list.c  test_rbtree.c
utils/: tools.h
